# reinforcement_learning_project_IABD

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md
docs/: scientific_sources.md
record/: monte_carlo_es_gridworld.csv  monte_carlo_es_lineworld.csv  monte_carlo_es_montyhall.csv  monte_carlo_es_secretenv0.csv  monte_carlo_es_secretenv1.csv  monte_carlo_es_secretenv2.csv  monte_carlo_es_secretenv3.csv  monte_carlo_es_tworoundrps.csv  monte_carlo_off_gridworld.csv  monte_carlo_off_lineworld.csv  monte_carlo_off_secretenv0.csv  monte_carlo_off_secretenv1.csv  monte_carlo_off_secretenv2.csv  monte_carlo_off_secretenv3.csv  monte_carlo_off_tworoundrps.csv  monte_carlo_on_gridworld.csv  monte_carlo_on_lineworld.csv  monte_carlo_on_montyhall.csv  monte_carlo_on_secretenv0.csv  monte_carlo_on_tworoundrps.csv  monte_carlo_timer.csv  policy_iteration_lineworld.csv  sarsa_gridworld.csv  sarsa_lineworld.csv  sarsa_montyhall.csv  sarsa_secretenv0.csv  sarsa_secretenv1.csv  sarsa_secretenv2.csv  sarsa_secretenv3.csv  sarsa_tworoundrps.csv
src/: lib.rs  logger.rs  main.rs  training_observer.rs
src/environement/: environement.rs  environment.rs  environment_traits.rs  farkle.rs  farkle_2.rs  farkle_3.rs  grid_world.rs  line_world.rs  mod.rs  monty_hall_1.rs  secret_env_0.rs  secret_env_1.rs  secret_env_2.rs  secret_env_3.rs  test_main.rs  tic_tac_toe.rs  two_round_rps.rs
src/ml_core/: ml_traits.rs  mlp.rs  mod.rs
src/notebook/: cours_drl.ipynb  env_timer_comparaison.ipynb
src/reinforcement_learning_functions/: mod.rs  monte_carlo_off_policy.rs  monte_carlo_on_policy.rs  (+5 more)
(+28 files in other folders)
