[package]
name = "IABD4_reinforcement_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "display_test"
path = "src/bin/display_tests.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "main_test"
path = "src/bin/main_test.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
libloading = "0.8.3"
once_cell = "1.7"
termtree = "*"
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
rand_xoshiro = "0.6.0"
burn = { version = "0.14.0", features = ["wgpu", "autodiff", "ndarray", "tch"] }
colored = "2.1.0"
kdam = "0.5.2"

